grammar.js
    source_file: ($) => repeat($._item),

    _item: ($) =>
      choice(
        $._declaration,
        $.attribute,
        $.conditional_block,
      ),

    function_declaration: ($) =>
      seq(
        optional($.inline_specifier),
        'function',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameters),
        ':',
        field('return_type', $._type),
        field('body', $.block),
      ),

    parameters: ($) =>
      seq('(', commaSep(choice($.self_parameter, $.parameter)), ')'),

    parameter: ($) =>
      seq(
        repeat($.attribute),
        field('name', $.identifier),
        ':',
        field('type', $._type),
      ),

    self_parameter: ($) => seq('&', optional($.mutable_specifier), 'self'),

    const_declaration: ($) =>
      seq(
        'const',
        field('name', $.identifier),
        ':',
        field('type', $._type),
        '=',
        field('value', $._expression),
        ';',
      ),

    record_declaration: ($) =>
      seq(
        'record',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('body', $.declaration_body),
      ),

    enum_declaration: ($) =>
      seq(
        'enum',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('body', $.enum_body),
      ),

    declaration_body: ($) =>
      seq(
        '{',
        repeat(choice($.attribute, $.field_declaration, $.method_declaration)),
        '}',
      ),

    enum_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            $.attribute,
            $.enum_variant,
            $.field_declaration,
            $.method_declaration,
          ),
        ),
        '}',
      ),

    enum_variant: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq('(', commaSep($._type), ')')),
        optional(','),
      ),

    field_declaration: ($) =>
      seq(
        repeat($.member_modifier),
        field('name', $.identifier),
        ':',
        field('type', $._type),
        optional(seq('=', field('value', $._expression))),
        ';',
      ),

    method_declaration: ($) =>
      seq(
        repeat($.member_modifier),
        optional('function'),
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameters),
        optional(seq(':', field('return_type', $._type))),
        choice(field('body', $.block), ';'),
      ),

    attribute: ($) =>
      prec.right(
        seq(
          '@',
          field('name', $._path),
          optional(field('arguments', $.attribute_arguments)),
        ),
      ),

    attribute_arguments: ($) =>
      seq('(', commaSep($._attribute_argument), ')'),

    _attribute_argument: ($) =>
      choice(
        $._expression,
        $.primitive_type,
        $.mutable_specifier,
        seq(field('name', $.identifier), ':', field('value', $._expression)),
      ),

    conditional_block: ($) =>
      seq(
        '@',
        choice('if', alias('ifelse', 'if')),
        '(',
        field('condition', $._expression),
        ')',
        field('consequence', $.conditional_body),
        optional(
          seq('@', 'else', field('alternative', $.conditional_body)),
        ),
      ),

    conditional_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            $._statement,
            $.import_statement,
            $.export_declaration,
            $.function_declaration,
            $.type_definition,
            $.record_declaration,
            $.enum_declaration,
            $.trait_declaration,
            $.extern_declaration,
            $.namespace_declaration,
          ),
        ),
        '}',
      ),

    // #endregion
    // #region Statements

    block: ($) => seq('{', repeat($._statement), '}'),

    _statement: ($) =>
      choice(
        $.variable_declaration,
        $.let_else_statement,
        $.const_declaration,
        $.expression_statement,
        $.return_statement,
        $.defer_statement,
        $.break_statement,
        $.continue_statement,
        $.if_statement,
        $.while_statement,
        $.for_statement,
        $.for_of_statement,
        $.asm_statement,
        $.block,
        $.conditional_block,
        $.attribute,
      ),

    variable_declaration: ($) =>
      seq(
        'let',
        optional($.mutable_specifier),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('value', $._expression))),
        ';',
      ),

    expression_statement: ($) => seq($._expression, ';'),

    return_statement: ($) => seq('return', optional($._expression), ';'),

    asm_statement: ($) => prec(1, seq(...asmParts($))),

    _expression: ($) =>
      choice(
        $.identifier,
        $.scoped_identifier,
        $.self_expression,
        $._literal,
        $.record_init,
        $.unit_expression,
        $.tuple_expression,
        $.group_expression,
        $.unary_expression,
        $.reference_expression,
        $.dereference_expression,
        $.postfix_expression,
        $.binary_expression,
        $.assignment_expression,
        $.ternary_expression,
        $.cast_expression,
        $.call_expression,
        $.member_expression,
        $.index_expression,
        $.match_expression,
        $.lambda_expression,
        $.builtin_expression,
        $.capture_expression,
        $.asm_expression,
      ),

    self_expression: (_) => 'self',

    member_expression: ($) =>
      prec.left(
        PREC.MEMBER,
        seq(
          field('object', $._expression),
          '.',
          field('property', $.identifier),
        ),
      ),

    index_expression: ($) =>
      prec.left(
        PREC.MEMBER,
        seq(
          field('object', $._expression),
          '[',
          field('index', $._expression),
          ']',
        ),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field('function', $._expression),
          optional(field('type_arguments', $.type_arguments)),
          field('arguments', $.arguments),
        ),
      ),

    arguments: ($) => seq('(', commaSep($._expression), ')'),

    unary_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          field('operator', choice('-', '+', '!', '~', '++', '--')),
          field('operand', $._expression),
        ),
      ),

    reference_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq('&', optional($.mutable_specifier), field('operand', $._expression)),
      ),

    dereference_expression: ($) =>
      prec.right(PREC.UNARY, seq('*', field('operand', $._expression))),

    // Postfix `!` is the try operator (`@lang(try)`).
    postfix_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(
          field('operand', $._expression),
          field('operator', choice('++', '--', '!')),
        ),
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.MULTIPLICATIVE, choice('*', '/', '%')],
        [PREC.ADDITIVE, choice('+', '-')],
        [PREC.SHIFT, choice('<<', '>>')],
        [PREC.COMPARATIVE, choice('<', '<=', '>', '>=')],
        [PREC.EQUALITY, choice('==', '!=')],
        [PREC.BITAND, '&'],
        [PREC.BITXOR, '^'],
        [PREC.BITOR, '|'],
        [PREC.AND, '&&'],
        [PREC.OR, '||'],
        [PREC.PIPE, '|>'],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
      );
    },

    ternary_expression: ($) =>
      prec.right(
        PREC.TERNARY,
        seq(
          field('condition', $._expression),
          '?',
          field('consequence', $._expression),
          ':',
          field('alternative', $._expression),
        ),
      ),

    cast_expression: ($) =>
      prec.left(
        PREC.CAST,
        seq(field('value', $._expression), 'as', field('type', $._type)),
      ),

    match_expression: ($) =>
      seq(
        'match',
        '(',
        field('value', $._expression),
        ')',
        '{',
        optional(seq($.match_arm, repeat(seq(',', $.match_arm)), optional(','))),
        '}',
      ),

    match_arm: ($) =>
      seq(
        field('pattern', $._pattern),
        optional(field('guard', $.match_guard)),
        '->',
        field('value', choice($._expression, $.block)),
      ),

    builtin_expression: ($) =>
      seq(
        '@',
        field('name', $.identifier),
        optional(field('type_arguments', $.type_arguments)),
        field('arguments', $.arguments),
      ),

    // Lambda capture overrides: `@move expr`, `@ref expr`, `@refMut expr`.
    capture_expression: ($) =>
      prec.right(
        PREC.UNARY,
        seq(
          '@',
          field('kind', choice('move', 'ref', 'refMut')),
          field('operand', $._expression),
        ),
      ),

    asm_expression: ($) => seq(...asmParts($)),

    asm_inputs: ($) => seq('(', commaSep($.asm_input), ')'),

    asm_input: ($) =>
      seq(
        field('value', $._expression),
        field('mode', choice('in', 'inout')),
        field('location', $.identifier),
      ),

    asm_outputs: ($) => seq('(', commaSep1($.asm_output), ')'),

    asm_output: ($) =>
      seq(
        field('name', $.identifier),
        ':',
        field('type', $._type),
        'in',
        field('location', $.identifier),
      ),

    asm_clobbers: ($) => seq('clobber', '(', commaSep1($.identifier), ')'),

    // The body is assembly text. Every piece after the opening `{` is an
    // immediate token so `extras` cannot swallow the whitespace and newlines
    // that separate instructions. `{{` and `}}` are escaped braces and win over
    // a lone `{` or `}` as the longer match, the same greedy pairing the
    // compiler's lexer does. `//` and `/* */` comments are the ordinary comment
    // extras, so braces inside them never open a hole or close the body.
    asm_body: ($) =>
      seq(
        '{',
        repeat(
          choice(
            $.asm_hole,
            $.asm_escape,
            $._asm_text,
            $._asm_slash,
          ),
        ),
        token.immediate('}'),
      ),

    // A `/` is text unless it starts a comment. The text token takes one when
    // something other than a brace, `/` or `*` follows it, and this token takes
    // the one left before a brace.
    _asm_text: (_) => token.immediate(prec(1, /([^{}\/]|\/[^{}\/*])+/)),

    _asm_slash: (_) => token.immediate('/'),

    asm_escape: (_) => token.immediate(choice('{{', '}}')),

    asm_hole: ($) => seq(token.immediate('{'), field('name', $.identifier), '}'),

    _pattern: ($) =>
      choice(
        $._simple_pattern,
        $.or_pattern,
      ),

    wildcard_pattern: (_) => '_',

    path_pattern: ($) =>
      prec.right(
        seq(
          field('name', $._path),
          optional(seq('(', commaSep($._pattern), ')')),
        ),
      ),

    _type: ($) =>
      choice(
        $.primitive_type,
        $.identifier,
        $.scoped_identifier,
        $.generic_type,
        $.function_type,
        $.reference_type,
        $.pointer_type,
        $.mutable_type,
        $.array_type,
      ),

    primitive_type: (_) => choice(...PRIMITIVE_TYPES),

    pointer_type: ($) => prec.right(seq('*', $._type)),

    mutable_type: ($) => prec.right(seq('mut', $._type)),

    type_parameters: ($) => seq('<', commaSep1($.type_parameter), '>'),

    type_parameter: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq(':', field('constraint', $.constraint_list))),
      ),

    type_arguments: ($) => prec.dynamic(1, seq('<', commaSep1($._type), '>')),

    // #endregion
    // #region Literals and lexical

    integer_literal: (_) => token(/[0-9]+(_[0-9]+)*/),

    string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.escape_sequence,
            token.immediate(prec(1, /[^"\\]+/)),
          ),
        ),
        '"',
      ),

    boolean_literal: (_) => choice('true', 'false'),

    mutable_specifier: (_) => 'mut',

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    scoped_identifier: ($) =>
      seq(
        field('path', $.identifier),
        repeat1(seq('::', field('name', $.identifier))),
      ),

    _path: ($) => choice($.identifier, $.scoped_identifier),

    comment: (_) =>
      token(
        choice(
          seq('//', /.*/),
          seq('/*', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
        ),
      ),

    doc_comment: (_) =>
      token(
        prec(2,
          choice(
            seq('///', /.*/),
            seq('//!', /.*/),
            seq('/**', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
            seq('/*!', /[^*]*\*+([^/*][^*]*\*+)*/, '/'),
          ),
        ),
      ),

    // #endregion
  },
});
