test/corpus/comment.txt
================================================================================
VALID - Comment
================================================================================

// This is a comment

/* This is a comment */

/*
* This is a comment
*/

/** This is a document comment */

/**
* This is a document comment
*/

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (comment)
  (doc_comment)
  (doc_comment))
